src/OpenCvSharp.Native/include/open_cv_sharp/imgproc.h

typedef struct jyppx_ocv_clahe jyppx_ocv_clahe;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_create(
    double clip_limit,
    int tiles_grid_width,
    int tiles_grid_height,
    jyppx_ocv_clahe** clahe);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_imgproc_clahe_release(
    jyppx_ocv_clahe* clahe);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_apply(
    jyppx_ocv_clahe* clahe,
    const jyppx_ocv_mat* src,
    jyppx_ocv_mat* dst);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_get_clip_limit(
    const jyppx_ocv_clahe* clahe,
    double* clip_limit);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_set_clip_limit(
    jyppx_ocv_clahe* clahe,
    double clip_limit);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_get_tiles_grid_size(
    const jyppx_ocv_clahe* clahe,
    int* width,
    int* height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_set_tiles_grid_size(
    jyppx_ocv_clahe* clahe,
    int width,
    int height);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_get_bit_shift(
    const jyppx_ocv_clahe* clahe,
    int* bit_shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_clahe_set_bit_shift(
    jyppx_ocv_clahe* clahe,
    int bit_shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_fit_ellipse_direct(
    const int* points_xy,
    int point_count,
    float* center_x,
    float* center_y,
    float* width,
    float* height,
    float* angle);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_rotated_rectangle_intersection_count(
    float rect1_center_x,
    float rect1_center_y,
    float rect1_width,
    float rect1_height,
    float rect1_angle,
    float rect2_center_x,
    float rect2_center_y,
    float rect2_width,
    float rect2_height,
    float rect2_angle,
    int* intersection_type,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_rotated_rectangle_intersection_fill(
    float rect1_center_x,
    float rect1_center_y,
    float rect1_width,
    float rect1_height,
    float rect1_angle,
    float rect2_center_x,
    float rect2_center_y,
    float rect2_width,
    float rect2_height,
    float rect2_angle,
    float* points_xy,
    int point_capacity,
    int* intersection_type,
    int* point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_closest_ellipse_points(
    float center_x,
    float center_y,
    float width,
    float height,
    float angle,
    const int* points_xy,
    int point_count,
    float* closest_points_xy,
    int closest_point_capacity);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_min_enclosing_triangle(
    const int* points_xy,
    int point_count,
    float* triangle_points_xy,
    int triangle_point_capacity,
    double* area);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_min_enclosing_convex_polygon(
    const int* points_xy,
    int point_count,
    int k,
    float* polygon_points_xy,
    int polygon_point_capacity,
    int* polygon_point_count,
    double* area);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_intersect_convex_convex_count(
    const int* polygon1_xy,
    int polygon1_point_count,
    const int* polygon2_xy,
    int polygon2_point_count,
    int handle_nested,
    float* area,
    int* intersecting_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_intersect_convex_convex_fill(
    const int* polygon1_xy,
    int polygon1_point_count,
    const int* polygon2_xy,
    int polygon2_point_count,
    int handle_nested,
    float* intersecting_points_xy,
    int intersecting_point_capacity,
    float* area,
    int* intersecting_point_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_fit_line_2d(
    const int* points_xy,
    int point_count,
    int dist_type,
    double param,
    double reps,
    double aeps,
    float* vx,
    float* vy,
    float* x0,
    float* y0);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_rectangle(
    jyppx_ocv_mat* img,
    int x1,
    int y1,
    int x2,
    int y2,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_rectangle_by_rect(
    jyppx_ocv_mat* img,
    int x,
    int y,
    int width,
    int height,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_circle(
    jyppx_ocv_mat* img,
    int center_x,
    int center_y,
    int radius,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_ellipse(
    jyppx_ocv_mat* img,
    int center_x,
    int center_y,
    int axes_width,
    int axes_height,
    double angle,
    double start_angle,
    double end_angle,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int shift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_put_text(
    jyppx_ocv_mat* img,
    const char* text,
    int org_x,
    int org_y,
    int font_face,
    double font_scale,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int thickness,
    int line_type,
    int bottom_left_origin);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_imgproc_get_text_size(
    const char* text,
    int font_face,
    double font_scale,
    int thickness,
    int* width,
    int* height,
    int* base_line);