src/OpenCvSharp/Internal/Interop/NativeMethods.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse_direct")]
        internal static extern int ImgProcFitEllipseDirect(
            int[] pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_ellipse_direct")]
        internal static unsafe extern int ImgProcFitEllipseDirectPtr(
            int* pointsXy,
            int pointCount,
            out float centerX,
            out float centerY,
            out float width,
            out float height,
            out float angle);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_rotated_rectangle_intersection_count")]
        internal static extern int ImgProcRotatedRectangleIntersectionCount(
            float rect1CenterX,
            float rect1CenterY,
            float rect1Width,
            float rect1Height,
            float rect1Angle,
            float rect2CenterX,
            float rect2CenterY,
            float rect2Width,
            float rect2Height,
            float rect2Angle,
            out int intersectionType,
            out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_rotated_rectangle_intersection_fill")]
        internal static extern int ImgProcRotatedRectangleIntersectionFill(
            float rect1CenterX,
            float rect1CenterY,
            float rect1Width,
            float rect1Height,
            float rect1Angle,
            float rect2CenterX,
            float rect2CenterY,
            float rect2Width,
            float rect2Height,
            float rect2Angle,
            float[] pointsXy,
            int pointCapacity,
            out int intersectionType,
            out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_closest_ellipse_points")]
        internal static extern int ImgProcGetClosestEllipsePoints(
            float centerX,
            float centerY,
            float width,
            float height,
            float angle,
            int[] pointsXy,
            int pointCount,
            float[] closestPointsXy,
            int closestPointCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_closest_ellipse_points")]
        internal static unsafe extern int ImgProcGetClosestEllipsePointsPtr(
            float centerX,
            float centerY,
            float width,
            float height,
            float angle,
            int* pointsXy,
            int pointCount,
            float* closestPointsXy,
            int closestPointCapacity);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_triangle")]
        internal static extern int ImgProcMinEnclosingTriangle(
            int[] pointsXy,
            int pointCount,
            float[] trianglePointsXy,
            int trianglePointCapacity,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_triangle")]
        internal static unsafe extern int ImgProcMinEnclosingTrianglePtr(
            int* pointsXy,
            int pointCount,
            float* trianglePointsXy,
            int trianglePointCapacity,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_convex_polygon")]
        internal static extern int ImgProcMinEnclosingConvexPolygon(
            int[] pointsXy,
            int pointCount,
            int k,
            float[] polygonPointsXy,
            int polygonPointCapacity,
            out int polygonPointCount,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_min_enclosing_convex_polygon")]
        internal static unsafe extern int ImgProcMinEnclosingConvexPolygonPtr(
            int* pointsXy,
            int pointCount,
            int k,
            float* polygonPointsXy,
            int polygonPointCapacity,
            out int polygonPointCount,
            out double area);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_intersect_convex_convex_count")]
        internal static extern int ImgProcIntersectConvexConvexCount(
            int[] polygon1Xy,
            int polygon1PointCount,
            int[] polygon2Xy,
            int polygon2PointCount,
            int handleNested,
            out float area,
            out int intersectingPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_intersect_convex_convex_count")]
        internal static unsafe extern int ImgProcIntersectConvexConvexCountPtr(
            int* polygon1Xy,
            int polygon1PointCount,
            int* polygon2Xy,
            int polygon2PointCount,
            int handleNested,
            out float area,
            out int intersectingPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_intersect_convex_convex_fill")]
        internal static extern int ImgProcIntersectConvexConvexFill(
            int[] polygon1Xy,
            int polygon1PointCount,
            int[] polygon2Xy,
            int polygon2PointCount,
            int handleNested,
            float[] intersectingPointsXy,
            int intersectingPointCapacity,
            out float area,
            out int intersectingPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_intersect_convex_convex_fill")]
        internal static unsafe extern int ImgProcIntersectConvexConvexFillPtr(
            int* polygon1Xy,
            int polygon1PointCount,
            int* polygon2Xy,
            int polygon2PointCount,
            int handleNested,
            float* intersectingPointsXy,
            int intersectingPointCapacity,
            out float area,
            out int intersectingPointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_line_2d")]
        internal static extern int ImgProcFitLine2D(
            int[] pointsXy,
            int pointCount,
            int distType,
            double param,
            double reps,
            double aeps,
            out float vx,
            out float vy,
            out float x0,
            out float y0);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_fit_line_2d")]
        internal static unsafe extern int ImgProcFitLine2DPtr(
            int* pointsXy,
            int pointCount,
            int distType,
            double param,
            double reps,
            double aeps,
            out float vx,
            out float vy,
            out float x0,
            out float y0);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_rectangle")]
        internal static extern int ImgProcRectangle(
            IntPtr img,
            int x1,
            int y1,
            int x2,
            int y2,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_rectangle_by_rect")]
        internal static extern int ImgProcRectangleByRect(
            IntPtr img,
            int x,
            int y,
            int width,
            int height,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_circle")]
        internal static extern int ImgProcCircle(
            IntPtr img,
            int centerX,
            int centerY,
            int radius,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_ellipse")]
        internal static extern int ImgProcEllipse(
            IntPtr img,
            int centerX,
            int centerY,
            int axesWidth,
            int axesHeight,
            double angle,
            double startAngle,
            double endAngle,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int shift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_put_text")]
        internal static extern int ImgProcPutText(
            IntPtr img,
            byte[] text,
            int orgX,
            int orgY,
            int fontFace,
            double fontScale,
            double colorV0,
            double colorV1,
            double colorV2,
            double colorV3,
            int thickness,
            int lineType,
            int bottomLeftOrigin);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_get_text_size")]
        internal static extern int ImgProcGetTextSize(
            byte[] text,
            int fontFace,
            double fontScale,
            int thickness,
            out int width,
            out int height,
            out int baseLine);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_create")]
        internal static extern int ImgProcClaheCreate(double clipLimit, int tilesGridWidth, int tilesGridHeight, out IntPtr clahe);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_release")]
        internal static extern void ImgProcClaheRelease(IntPtr clahe);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_apply")]
        internal static extern int ImgProcClaheApply(IntPtr clahe, IntPtr src, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_get_clip_limit")]
        internal static extern int ImgProcClaheGetClipLimit(IntPtr clahe, out double clipLimit);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_set_clip_limit")]
        internal static extern int ImgProcClaheSetClipLimit(IntPtr clahe, double clipLimit);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_get_tiles_grid_size")]
        internal static extern int ImgProcClaheGetTilesGridSize(IntPtr clahe, out int width, out int height);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_set_tiles_grid_size")]
        internal static extern int ImgProcClaheSetTilesGridSize(IntPtr clahe, int width, int height);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_get_bit_shift")]
        internal static extern int ImgProcClaheGetBitShift(IntPtr clahe, out int bitShift);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_imgproc_clahe_set_bit_shift")]
        internal static extern int ImgProcClaheSetBitShift(IntPtr clahe, int bitShift);
